--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
 }
 
  .bg-img {
-    background-image: url("images/images\ \(1\).jpg");
+    background-image: url("images\ \(1\).jpg");
     min-height: 100vh;
     background-size: cover;
     display: flex;
